
NEWS:

Compatibility with older Editra Style Sheet's modifier syntax has been removed,
style sheet made for pre 0.4 release version may have trouble properly loading 
in this version.

NEW: [features/improvements]
+New version of Launch plugin (new handlers can be added via xml interface)
+Clicking on encoding field in statusbar will allow encoding of current document
 to be converted.

LIBRARY:

BUG FIXES:
+Fix error in handling of unknown encodings.
+Trim long python calltips to ensure that function signature is visible (patch from appliedmath)
+Fix issue with opening files via relative path from commandline

#-----------------------------------------------------------------------------#

VERSION 0.5.15
DATE 10/31/2009
30th Alpha Release

NEWS:

This release contains a a large number of internal changes. New features include
the ability to customize syntax highlighting and add new file type support
through xml files. Spell checking is now also supported through the use of the
enchant spell checking library.

NEW: [features/improvements]
+Syntax highlighting can be extended and overridden by user defined extensions.
+Spell checking support (requires enchant)
+Plugins can now be un-installed through plugin manager.
+Add support for STATA (patch from Jean Eid).

LIBRARY:
+New api for plugins and other clients to customize buffer context menu.
+New profile api's for registering for notifications of profile changes.

BUG FIXES:
+Fix crash that could occur when loading some binary data into buffer.
+Return unique sorted list of terms when using extended autocomp.
+Fix some color issues when running under GTK.
+Fix line number preference not being remembered on startup.
+Fix error in handling corrupted session files.
+Fix bug in auto clearing of status text that would let timer to continue
 running unnecessarily.
+Fix errors that could occur occasionally when setting status text.
+Fix bug in error reporting when file reload fails.